@@ -1,0 +1,133 @@
+-- Stratagus Map Setup
+-- File generated by the Bos Wars builtin editor.
+-- File licensed under the GNU GPL version 2 or later.
+
+-- player configuration
+Players[0]:SetStartView(0, 0)
+Players[0].EnergyStored = 1000
+Players[0].MagmaStored = 1000
+Players[0].AiName = "ai-default"
+Players[1]:SetStartView(79, 0)
+Players[1].EnergyStored = 1000
+Players[1].MagmaStored = 1000
+Players[1].AiName = "ai-default"
+Players[2]:SetStartView(79, 79)
+Players[2].EnergyStored = 1000
+Players[2].MagmaStored = 1000
+Players[2].AiName = "ai-default"
+Players[3]:SetStartView(0, 79)
+Players[3].EnergyStored = 1000
+Players[3].MagmaStored = 1000
+Players[3].AiName = "ai-default"
+Players[4]:SetStartView(0, 0)
+Players[4].EnergyStored = 0
+Players[4].MagmaStored = 0
+Players[4].AiName = "ai-passive"
+Players[5]:SetStartView(0, 0)
+Players[5].EnergyStored = 0
+Players[5].MagmaStored = 0
+Players[5].AiName = "ai-passive"
+Players[6]:SetStartView(0, 0)
+Players[6].EnergyStored = 0
+Players[6].MagmaStored = 0
+Players[6].AiName = "ai-passive"
+Players[7]:SetStartView(0, 0)
+Players[7].EnergyStored = 0
+Players[7].MagmaStored = 0
+Players[7].AiName = "ai-passive"
+
+Load(GetCurrentLuaPath() .. "/terrain.lua")
+
+-- place units
+CreateUnit("unit-vault", 1, {63, 11})
+CreateUnit("unit-vault", 0, {11, 11})
+CreateUnit("unit-vault", 3, {11, 63})
+CreateUnit("unit-vault", 2, {63, 64})
+CreateUnit("unit-engineer", 2, {69, 73})
+CreateUnit("unit-engineer", 2, {79, 78})
+CreateUnit("unit-engineer", 1, {78, 0})
+CreateUnit("unit-engineer", 1, {69, 7})
+CreateUnit("unit-engineer", 3, {10, 73})
+CreateUnit("unit-engineer", 3, {1, 79})
+CreateUnit("unit-engineer", 0, {0, 1})
+CreateUnit("unit-engineer", 0, {5, 9})
+CreateUnit("unit-biggunturret", 0, {31, 26})
+CreateUnit("unit-biggunturret", 0, {26, 31})
+CreateUnit("unit-biggunturret", 1, {47, 26})
+CreateUnit("unit-biggunturret", 1, {52, 31})
+CreateUnit("unit-biggunturret", 2, {52, 47})
+CreateUnit("unit-biggunturret", 2, {47, 52})
+CreateUnit("unit-biggunturret", 3, {31, 52})
+CreateUnit("unit-biggunturret", 3, {26, 47})
+CreateUnit("unit-hotspot", PlayerNumNeutral, {36, 42})
+CreateUnit("unit-hotspot", PlayerNumNeutral, {42, 36})
+CreateUnit("unit-hotspot", PlayerNumNeutral, {36, 36})
+CreateUnit("unit-hotspot", PlayerNumNeutral, {42, 42})
+CreateUnit("unit-weakhotspot", PlayerNumNeutral, {18, 4})
+CreateUnit("unit-weakhotspot", PlayerNumNeutral, {4, 18})
+CreateUnit("unit-weakhotspot", PlayerNumNeutral, {4, 60})
+CreateUnit("unit-weakhotspot", PlayerNumNeutral, {18, 74})
+CreateUnit("unit-weakhotspot", PlayerNumNeutral, {60, 74})
+CreateUnit("unit-weakhotspot", PlayerNumNeutral, {74, 60})
+CreateUnit("unit-weakhotspot", PlayerNumNeutral, {74, 18})
+CreateUnit("unit-weakhotspot", PlayerNumNeutral, {60, 4})
+CreateUnit("unit-tree03", PlayerNumNeutral, {39, 78})
+CreateUnit("unit-tree03", PlayerNumNeutral, {35, 79})
+CreateUnit("unit-tree03", PlayerNumNeutral, {39, 74})
+CreateUnit("unit-tree03", PlayerNumNeutral, {44, 79})
+CreateUnit("unit-tree03", PlayerNumNeutral, {33, 79})
+CreateUnit("unit-tree03", PlayerNumNeutral, {40, 76})
+CreateUnit("unit-tree03", PlayerNumNeutral, {46, 78})
+CreateUnit("unit-tree04", PlayerNumNeutral, {41, 79})
+CreateUnit("unit-tree04", PlayerNumNeutral, {37, 79})
+CreateUnit("unit-tree04", PlayerNumNeutral, {38, 76})
+CreateUnit("unit-tree04", PlayerNumNeutral, {41, 71})
+CreateUnit("unit-tree04", PlayerNumNeutral, {48, 79})
+CreateUnit("unit-tree04", PlayerNumNeutral, {31, 78})
+CreateUnit("unit-tree04", PlayerNumNeutral, {38, 75})
+CreateUnit("unit-tree04", PlayerNumNeutral, {71, 40})
+CreateUnit("unit-tree04", PlayerNumNeutral, {78, 34})
+CreateUnit("unit-tree04", PlayerNumNeutral, {78, 37})
+CreateUnit("unit-tree04", PlayerNumNeutral, {78, 38})
+CreateUnit("unit-tree04", PlayerNumNeutral, {77, 41})
+CreateUnit("unit-tree04", PlayerNumNeutral, {79, 47})
+CreateUnit("unit-tree04", PlayerNumNeutral, {78, 43})
+CreateUnit("unit-tree04", PlayerNumNeutral, {75, 39})
+CreateUnit("unit-tree03", PlayerNumNeutral, {78, 45})
+CreateUnit("unit-tree03", PlayerNumNeutral, {79, 43})
+CreateUnit("unit-tree03", PlayerNumNeutral, {72, 41})
+CreateUnit("unit-tree03", PlayerNumNeutral, {79, 35})
+CreateUnit("unit-tree03", PlayerNumNeutral, {79, 36})
+CreateUnit("unit-tree03", PlayerNumNeutral, {79, 31})
+CreateUnit("unit-tree03", PlayerNumNeutral, {76, 41})
+CreateUnit("unit-tree03", PlayerNumNeutral, {76, 38})
+CreateUnit("unit-tree03", PlayerNumNeutral, {35, 2})
+CreateUnit("unit-tree03", PlayerNumNeutral, {39, 4})
+CreateUnit("unit-tree03", PlayerNumNeutral, {40, 6})
+CreateUnit("unit-tree03", PlayerNumNeutral, {45, 2})
+CreateUnit("unit-tree03", PlayerNumNeutral, {39, 5})
+CreateUnit("unit-tree03", PlayerNumNeutral, {38, 2})
+CreateUnit("unit-tree03", PlayerNumNeutral, {36, 1})
+CreateUnit("unit-tree04", PlayerNumNeutral, {40, 7})
+CreateUnit("unit-tree04", PlayerNumNeutral, {44, 1})
+CreateUnit("unit-tree04", PlayerNumNeutral, {40, 1})
+CreateUnit("unit-tree04", PlayerNumNeutral, {33, 1})
+CreateUnit("unit-tree04", PlayerNumNeutral, {41, 3})
+CreateUnit("unit-tree04", PlayerNumNeutral, {39, 7})
+CreateUnit("unit-tree04", PlayerNumNeutral, {40, 8})
+CreateUnit("unit-tree04", PlayerNumNeutral, {7, 41})
+CreateUnit("unit-tree04", PlayerNumNeutral, {6, 39})
+CreateUnit("unit-tree04", PlayerNumNeutral, {0, 44})
+CreateUnit("unit-tree04", PlayerNumNeutral, {1, 37})
+CreateUnit("unit-tree04", PlayerNumNeutral, {0, 33})
+CreateUnit("unit-tree04", PlayerNumNeutral, {4, 40})
+CreateUnit("unit-tree04", PlayerNumNeutral, {5, 41})
+CreateUnit("unit-tree03", PlayerNumNeutral, {3, 39})
+CreateUnit("unit-tree03", PlayerNumNeutral, {1, 39})
+CreateUnit("unit-tree03", PlayerNumNeutral, {2, 40})
+CreateUnit("unit-tree03", PlayerNumNeutral, {1, 41})
+CreateUnit("unit-tree03", PlayerNumNeutral, {1, 46})
+CreateUnit("unit-tree03", PlayerNumNeutral, {1, 47})
+CreateUnit("unit-tree03", PlayerNumNeutral, {1, 35})
+
+
